[project]
name = "openstack-helper"
description = "A command-line tool to assist in OpenStack cloud administration."
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.7"
authors = [
    {name = "Thobias Salazar Trevisan"},
]

[project.scripts]
openstack-helper = "openstack_helper.main:main"

[project.urls]
"Homepage" = "https://github.com/thobiast/openstack-helper"
"Source" = "https://github.com/thobiast/openstack-helper"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "openstack_helper.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 95

[tool.pylint]
max-line-length = 95
disable = [
	"C0116", # missing-function-docstring
]
